--- a/src/views/checkyouremail.handlebars
+++ b/src/views/checkyouremail.handlebars
@@ -1,10 +1,18 @@
-<div>
-  <h1>Chequee su email</h1>
+<div class="min-h-screen flex items-center justify-center bg-gray-100">
+  <div class="bg-white p-8 rounded shadow-md w-96 text-center">
+    <h1 class="text-2xl font-semibold mb-6">Chequee su email</h1>
 
-  <div> <a href="/"><button>Volver al login</button></a></div>
+    <div class="mb-4">
+      <a href="/" class="text-blue-500 hover:underline"><button class="bg-gray-200 px-4 py-2 rounded">Volver al
+          login</button></a>
+    </div>
 
-  <div>
-    <br>
-    <a href="/api/session/github"> <button type="submit">Entrar con GITHUB</button></a>
+    <div>
+      <a href="/api/session/github">
+        <button type="submit"
+          class="bg-black text-white px-4 py-2 rounded hover:bg-gray-800 focus:outline-none focus:ring focus:border-gray-300">Entrar
+          con GITHUB</button>
+      </a>
+    </div>
   </div>
 </div>
