--- a/src/views/emailwithrecover.handlebars
+++ b/src/views/emailwithrecover.handlebars
@@ -1,12 +1,24 @@
-<div>
-    <h1>Recuperacion de Contraseña</h1>
+<header class='bg-black'>
+    <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
+</header>
 
-    <div>
+
+
+<div class="min-h-screen flex items-center justify-center">
+    <div class="bg-white p-8 rounded shadow-md w-96">
+        <h1 class="text-2xl font-semibold mb-6">Recuperación de Contraseña</h1>
+
         <form action="/api/session/recoverwithemail" method="post">
-            <label for="email">Correo</label><br>
-            <input type="email" name="email" id="email" placeholder="Introduzca su correo">
+            <div class="mb-4">
+                <label for="email" class="block text-sm font-medium text-gray-600">Correo</label>
+                <input type="email" name="email" id="email" placeholder="Introduzca su correo"
+                    class="mt-1 p-2 w-full border rounded-md">
+            </div>
 
-            <button type="submit">Recuperar Contraseña</button>
+            <button type="submit"
+                class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 focus:outline-none focus:ring focus:border-blue-300">
+                Recuperar Contraseña
+            </button>
         </form>
     </div>
 </div>
