--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,57 +1,81 @@
-<header class="bg-black">
-  <h1 class="text-white text-center uppercase text-2xl py-2">E-commerce</h1>
+<header class='bg-black'>
+  <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
 </header>
 
-<main class="flex  flex-col justify-center items-center px-6 py-12 lg:px-8">
+<main class='flex flex-col container mx-auto sm:flex-row justify-center items-center px-6 lg:px-8'>
+  <div class='mt-10 sm:mx-auto sm:border-r p-4'>
+    <div class='p-8'>
 
-  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-    <img class="mx-auto h-10 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
-      alt="Your Company">
-    <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Inicio de Sesion</h1>
-  </div>
+      <p class='text-center font-semibold uppercase mb-2'>¡Qué bueno, volviste!</p>
+      <p class='text-center font-weight text-[#525252] mb-4 leading-5'>Al
+        ingresar, encontrarás productos seleccionados, tus favoritos, los puntos
+        ganados para canjear, descuentos y mucho más.</p>
 
-  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
-    <form action="/api/session/login" method="post" class="space-y-6">
-      <div>
-        <label for="email" class="block text-sm font-medium leading-6 text-gray-900">Correo</label>
-        <div class="mt-2">
-          <input type="email" name="email" id="email" autocomplete="email"
-            placeholder="introduzca su correo electronico"
-            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
-        </div>
-      </div>
-
-      <div>
-        <div class="flex items-center justify-between">
-          <label for="password" class="block text-sm font-medium leading-6 text-gray-900">Contraseña</label>
-          <div class="text-sm">
-            <a href="/emailwithrecover" class="font-semibold text-indigo-600 hover:text-indigo-500">Restaurar
-              Contraseña</a>
+      <form action='/api/session/login' method='post' class='space-y-6 mb-8'>
+        <div>
+          <label for='email' class='block text-sm font-medium text-gray-900 uppercase'>Correo Electronico</label>
+          <div class='mt-2'>
+            <input type='email' name='email' id='email' autocomplete='email'
+              placeholder='introduzca su correo electronico'
+              class='block w-full rounded-md border-0 pl-1 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6' />
           </div>
         </div>
+
         <div>
-          <input type="password" name="password" id="password" autocomplete="current-password"
-            placeholder="introduzca su contraseña" required
-            class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" />
+          <div class='flex items-center justify-between'>
+            <label for='password' class='block text-sm font-medium leading-6 text-gray-900 uppercase'>Contraseña</label>
+            <div class='text-sm'>
+              <a href='/emailwithrecover' class='font-semibold text-indigo-600 hover:text-indigo-500'>¿Olvidaste tu
+                contraseña?</a>
+            </div>
+          </div>
+          <div>
+            <input type='password' name='password' id='password' autocomplete='current-password'
+              placeholder='Introduzca su contraseña' required
+              class='block w-full rounded-md border-0 py-1.5 pl-1 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6' />
+          </div>
+        </div>
+        <button type='submit'
+          class='flex w-full mb-4 uppercase justify-center bg-black px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600'>Ingresar</button>
+      </form>
+      <div class='grid grid-cols-2 gap-4'>
+        <div class='p-2'>
+          <a href='/api/session/github'>
+            <button type='submit'
+              class='w-full mb-8 uppercase bg-black px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600'>
+              Logearse Con Github
+            </button>
+          </a>
+        </div>
+        <div class='p-2'>
+          <a href='/api/session/github'>
+            <button type='submit'
+              class='w-full bg-black uppercase px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600'>
+              Logearse Con Github
+            </button>
+          </a>
         </div>
       </div>
-      <button type="submit"
-        class="flex w-full justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Logearse</button>
-    </form>
-    <div class="mt-2 text-center text-sm text-gray-500"> <a href="/register"><button>Register</button></a></div>
-    <div>
-      <a href="/api/session/github"> <button type="submit"
-          class="w-full justify-center text-white bg-[#24292F] hover:bg-[#24292F]/90 focus:ring-4 focus:outline-none focus:ring-[#24292F]/50 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:focus:ring-gray-500 dark:hover:bg-[#050708]/30 me-2 mb-2">
-          <svg class="w-4 h-4 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-            viewBox="0 0 20 20">
-            <path fill-rule="evenodd"
-              d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
-              clip-rule="evenodd" />
-          </svg>
-          Logearse Con Github
-        </button>
-        </a>
+    </div>
 
+  </div>
+  <div class='flex flex-col items-center justify-center text-center text-sm mt-10 sm:mx-auto sm:w-full max-w-[500px]'>
+    <div class='p-8'>
+
+      <p class='font-semibold uppercase mb-2'>¿Primera vez?</p>
+      <p class='text-gray-500 mb-4'>Crear una cuenta es gratis y simple. Podrás
+        ganar puntos, encontrar descuentos exclusivos y aprovechar oportunidades
+        únicas.</p>
+
+      <div class='flex flex-wrap gap-2 justify-center items-center'>
+        <p class='text-blue-500 px-3 py-2'>Envíos a todo el país</p>
+        <p class='text-blue-500 px-3 py-2'>Variedad de métodos de pago</p>
+        <p class='text-blue-500 px-3 py-2'>Envío gratis a CABA</p>
+      </div>
+      <button
+        class='mt-6 uppercase bg-indigo-600 px-4 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600'>
+        <a href='/register'>Crear Cuenta</a>
+      </button>
     </div>
   </div>
 
