🌈 Change Styles : change Styles of background in web

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,6 +1,8 @@
 <header class='bg-black'>
   <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
 </header>
+<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
+
 
 <main class='flex max-w-5xl container mx-auto py-12 lg:px-8'>
 
