--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,9 +1,11 @@
 <header class='bg-black'>
   <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
 </header>
+<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
 
 <main class='flex flex-col container mx-auto sm:flex-row justify-center items-center px-6 lg:px-8'>
-  <div class='mt-10 sm:mx-auto sm:border-r p-4'>
+  
+  <div class='mt-10 sm:mx-auto  p-4'>
     <div class='p-8'>
 
       <p class='text-center font-semibold uppercase mb-2'>¡Qué bueno, volviste!</p>
