--- a/src/views/recover.handlebars
+++ b/src/views/recover.handlebars
@@ -1,4 +1,8 @@
-<div class="min-h-screen flex items-center justify-center bg-gray-100">
+<header class='bg-black'>
+  <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
+</header>
+<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
+
   <div class="bg-white p-8 rounded shadow-md w-96 text-center">
     <h1 class="text-2xl font-semibold mb-6">Recuperación de Contraseña</h1>
 
