🐛 Fix : Fix index.js btn-delete-product and refactor gitignore, delete style.css

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -84,7 +84,7 @@
         <div class='bg-white rounded-lg overflow-hidden shadow-md'>
           <div class='relative'>
             <button data-product-id='{{id}}'
-              class='absolute top-2 right-2 bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-2 rounded-full focus:outline-none focus:shadow-outline-red btn-delete-product'>
+              class='btn-delete-product absolute top-2 right-2 bg-red-500 hover:bg-red-600 text-white font-semibold py-1 px-2 rounded-full focus:outline-none focus:shadow-outline-red '>
               Eliminar
             </button>
             <img src='{{thumbnails}}' alt='Product Image' class='w-full h-48 object-contain' />
