--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,30 +1,33 @@
 <header class='bg-black'>
   <h1 class='text-white text-center uppercase text-2xl py-2'>E-commerce</h1>
 </header>
-<div class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
 
+<div
+  class="absolute inset-0 -z-10 h-full w-full bg-white bg-[linear-gradient(to_right,#f0f0f0_1px,transparent_1px),linear-gradient(to_bottom,#f0f0f0_1px,transparent_1px)] bg-[size:6rem_4rem]"></div>
 
-<main class='flex max-w-5xl container mx-auto py-12 lg:px-8'>
-
+<main class='flex  max-w-5xl container mx-auto py-12 lg:px-8'>
   <div class="flex flex-col">
+    <div class="flex gap-2">
 
-    <a href='/cartsuser' class='text-blue-500 hover:underline'>Ir a ver mi
-      carrito</a><br />
-    <a href='/profile' class='text-blue-500 hover:underline'>Volver a mi perfil</a>
-  </div>
+      <a href='/cartsuser' class='text-blue-500 hover:underline'>Ir a ver mi
+        carrito</a><br />
+      <a href='/profile' class='text-blue-500 hover:underline'>Volver a mi
+        perfil</a>
+    </div>
 
-  <div class='max-w-md mx-auto bg-white p-8 rounded-md shadow-md'>
-    <form id='noteForm' action='/api/chat/' method='POST'>
-      <h1 class='text-2xl font-bold mb-5'>Escribe un mensaje</h1>
-      <div class='mb-4'>
-        <input type='text' id='user' name='user' placeholder='Usuario' class='w-full border rounded p-2' required />
-      </div>
-      <div class='mb-4'>
-        <textarea name='message' id='message' rows='2' placeholder='Escribe tu mensaje'
-          class='w-full border rounded p-2' required></textarea>
-      </div>
-      <button type='submit' class='w-full bg-blue-500 text-white p-3 rounded hover:bg-blue-600'>Enviar</button>
-    </form>
+    <div class='max-w-md mx-auto bg-white p-8 rounded-md shadow-md'>
+      <form id='noteForm' action='/api/chat/' method='POST'>
+        <h1 class='text-2xl font-bold mb-5'>Escribe un mensaje</h1>
+
+        <div class='mb-4'>
+          <textarea name='message' id='message' rows='2'
+            placeholder='Escribe tu mensaje'
+            class='w-full border rounded p-2' required></textarea>
+        </div>
+        <button type='submit'
+          class='w-full bg-blue-500 text-white p-3 rounded hover:bg-blue-600'>Enviar</button>
+      </form>
+    </div>
   </div>
 
   <div class='max-w-xl container mx-auto'>
@@ -40,5 +43,3 @@
     {{/each}}
   </div>
 </main>
-
-<script src='https://cdn.jsdelivr.net/npm/sweetalert2@11'></script>
