--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -26,7 +26,7 @@
         <div>
           <div class='flex items-center justify-between'>
             <label for='password' class='block text-sm font-medium leading-6 text-gray-900 uppercase'>Contraseña</label>
-            <div class='text-sm'>
+            <div class='text-sm '>
               <a href='/emailwithrecover' class='font-semibold text-indigo-600 hover:text-indigo-500'>¿Olvidaste tu
                 contraseña?</a>
             </div>
@@ -40,7 +40,7 @@
         <button type='submit'
           class='flex w-full mb-4 uppercase justify-center bg-black px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600'>Ingresar</button>
       </form>
-      <div class='grid grid-cols-2 gap-4'>
+      <div class='grid grid-cols-2 '>
         <div class='p-2'>
           <a href='/api/session/github'>
             <button type='submit'
@@ -54,7 +54,7 @@
             <button type='submit'
               class='w-full bg-black uppercase px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600'>
               Logearse Con Github
-            </button>
+            </button
           </a>
         </div>
       </div>
